js/js.translator/testData/incremental/invalidation/interfaceOpenMethods/lib2/GetA.kt
fun getObjectA() : A {
    return myObject
}
